--- a/CotrolPacientes/package.json
+++ b/CotrolPacientes/package.json
@@ -15,11 +15,14 @@
     "@angular/common": "~10.0.14",
     "@angular/compiler": "~10.0.14",
     "@angular/core": "~10.0.14",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.0.14",
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
     "bootstrap": "^4.5.2",
+    "firebase": "^7.22.0",
+    "ngx-toastr": "^13.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
