--- a/CotrolPacientes/package.json
+++ b/CotrolPacientes/package.json
@@ -20,9 +20,13 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "angular-datatables": "^9.0.2",
     "bootstrap": "^4.5.2",
+    "datatables.net": "^1.10.22",
+    "datatables.net-dt": "^1.10.22",
     "firebase": "^7.22.0",
-    "ngx-toastr": "^13.0.1",
+    "jquery": "^3.5.1",
+    "ngx-toastr": "^13.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -31,9 +35,11 @@
     "@angular-devkit/build-angular": "~0.1000.8",
     "@angular/cli": "~10.0.8",
     "@angular/compiler-cli": "~10.0.14",
-    "@types/node": "^12.11.1",
+    "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.2",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
